--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -7,11 +7,12 @@
 }
 
 .avatar img {
-  height: 100px;
-  width: 100px;
+  height: 285px;
+  width: 267px;
   object-fit: cover;
   background: #F4F4F7;
-  border-radius: 100% !important;
+  transform: scale(0.5);
+  /* border-radius: 100% !important; */
   border: 2px solid #a8b9de;
 }
 
