--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -111,3 +111,35 @@ transition style {
     outline: 0;
     box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25);
 }
+
+@media screen and (max-width: 768px) {
+  body {
+      font-size: 14px; /* ou même 12px si besoin */
+  }
+
+  h1 {
+      font-size: 2.5rem;
+  }
+
+  h2, h3 {
+      font-size: 1.5rem;
+  }
+
+  table td, table th {
+      font-size: 12px;
+  }
+
+  .btn {
+      padding: 6px 10px;
+  }
+
+.radioDiv {
+  display: flex;
+  flex-direction: column;
+}
+
+#main-logo {
+  height: 60%;
+  padding: auto;
+}
+}
