--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -2,16 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 
-html, body {
-	height: 100%;
-	margin: 0;
-}
-
 .container {
 	min-height: 100vh;
 	/* taille du footer + 20px */
-	padding-bottom: 80px;
+	padding-bottom: 80px; 
 }
+
 
 .spacer {
     height: 20px;
@@ -22,19 +18,20 @@ html, body {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 60px;
+	height: 80px;
 	text-align: center;
 	vertical-align: center;
 	box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
 }
 
 header {
+	width: 100%;
 	height: 164px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-  }
+}
 
 .left {
   text-align: left;
@@ -45,4 +42,89 @@ h1 {
 	font-size: 6rem;
 	color: #2f56b1;
 	margin: 20px 0 30px 0;
+}
+
+.rdvList {
+	font-family: 'Jersey 25', sans-serif;
+	font-size: 2rem;
+
+	th {
+		font-weight: 600;
+		font-size: 2.5rem;
+	}
+
+	td, th {
+		vertical-align: middle;
+		text-align: center; /* si tu veux centrer horizontalement aussi */
+	  }
+	  
+	.btn {
+		background-color: rgb(233, 108, 108);
+		padding: 5px 15px 5px 15px;
+		width: auto;
+		--bs-btn-font-size: 2rem;
+	}
+
+	.btn:active{
+		background-color: rgb(161, 76, 76);
+		border-color: rgb(161, 76, 76);
+	}
+
+	.btn:disabled {
+		border-color: inherit;
+	}
+}
+
+.navbar-brand {
+	align-content: center;
+	margin: auto;
+}
+
+.authentification {
+	margin:auto;
+	width:50%;
+}
+
+#main-logo {
+	height: 70%;
+	padding: auto;
+  }
+
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 14px; /* ou même 12px si besoin */
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2, h3 {
+        font-size: 1.5rem;
+    }
+
+    table td, table th {
+        font-size: 12px;
+    }
+
+    .btn {
+        font-size: 12px;
+        padding: 6px 10px;
+    }
+
+	.radioDiv {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.authentification {
+		margin:auto;
+		width:80%;
+	}
+
+	#main-logo {
+		height: 60%;
+		padding: auto;
+	  }
+	 
 }
