--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -22,6 +22,7 @@
 	text-align: center;
 	vertical-align: center;
 	box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+	background-color: #f8f9fa;
 }
 
 header {
