--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -8,6 +8,13 @@
 	padding-bottom: 80px; 
 }
 
+#bouton-fixe {
+	font-size: 1.5rem;
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	z-index: 1000; /* pour qu'il reste au-dessus des autres éléments */
+  }
 
 .spacer {
     height: 20px;
@@ -57,7 +64,8 @@ h1 {
 }
 
 #main-logo {
-	width: 20rem;
+	height: auto;
+	width: 25rem;
 	padding: auto;
   }
 
