--- a/asset/css/accueil.css
+++ b/asset/css/accueil.css
@@ -65,8 +65,9 @@ header {
 
 .btn {
   font-size: 2rem;
-  font-family: 'Jersey 25', sans-serif;
-  margin: 20px;
+  /* font-family: 'Jersey 25', sans-serif; */
+  font-weight: bold;
+  margin: 20px 0 20px 0;
   padding: 10px;
   border-radius: 20px;
   width: 100%;
@@ -82,7 +83,7 @@ transition style {
 
 .form-control, .form-control:focus {
   background-color: #D9D9D9;
-  font-family: 'Jersey 25', sans-serif;
+  /* font-family: 'Jersey 25', sans-serif; */
   font-size: 1.5rem;
   border-radius: 20px;
   padding: 15px;
@@ -92,7 +93,7 @@ transition style {
   display: flex; 
   flex-direction: row;
   justify-content: space-between;
-  font-family: 'Jersey 25', sans-serif;
+  /* font-family: 'Jersey 25', sans-serif; */
   font-size: 1.5rem;
   margin-bottom: 20px;
 }
